--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.active-scroll-spy {
+  background-color: yellowgreen;
+  border-radius: 15px;
+}
